--- a/views/new-nft-asset.ejs
+++ b/views/new-nft-asset.ejs
@@ -4,16 +4,14 @@
         <div class="pb-2 mt-4 mb-4">
 
             <% include templates/alert.ejs %>
-
-            <div class="row justify-content-sm-center mt-2">
-                <div class="col-sm-auto" id="sketch-holder"></div>
-            </div>
-            <div class="text-center mb-3">
-                <div class="small">Click the picture to start/pause your journey.</div>
-            </div>
-
+            
             <% if (owner) { %>
             <h2 id="tokenName"></h2>
+
+            <div class="row justify-content-sm-center mt-3 mb-3">
+                <div class="col-sm-auto" id="sketch-holder"></div>
+            </div>
+
             <div class="small mt-3">
                 <table class="table table-striped table-borderless">
                     <tbody>
@@ -22,6 +20,10 @@
                             <td>
                                 <a href="https://etherscan.io/address/<%= owner %>"><%= owner.replace(owner.slice(6, 38), '...' ) %></a>
                             </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Description</th>
+                            <td id="description"></td>
                         </tr>
                         <tr>
                             <th scope="row">Attributes</th>
@@ -45,17 +47,20 @@
     <% if (owner) { %>
         <script>
             const tokenMeta = <%- JSON.stringify(tokenMeta) %>;
+            const description = tokenMeta.description;
             const tokenAttributes = tokenMeta.attributes;
             const tokenHash = tokenMeta.tokenHash;
             const fullScreen = false;
             const newlyMinted = false;
 
             const tokenName = document.getElementById('tokenName');
+            const descriptionTable = document.getElementById('description');
             const attributesTable = document.getElementById('attributes');
             const artistTable = document.getElementById('artist');
             const marketLink = document.getElementById('market');
 
             tokenName.innerHTML = tokenMeta.name;
+            descriptionTable.innerHTML = description;
             attributesTable.innerHTML = '';
             tokenAttributes.forEach(x => {
                 attributesTable.innerHTML += `${x.trait_type}: ${x.value} <br>`
