--- a/views/new-nft-full.ejs
+++ b/views/new-nft-full.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
+    <script src="/lib/p5.min.js"></script>
     
     <style type="text/css">
         html,body{
