fix blockExplorer link.

--- a/views/new-nft-asset.ejs
+++ b/views/new-nft-asset.ejs
@@ -18,7 +18,7 @@
                         <tr>
                             <th scope="row">Current Owner</th>
                             <td>
-                                <a href="https://etherscan.io/address/<%= owner %>"><%= owner.replace(owner.slice(6, 38), '...' ) %></a>
+                                <a href="<%= blockExplorerUrls %>/address/<%= owner %>"><%= owner.replace(owner.slice(6, 38), '...' ) %></a>
                             </td>
                         </tr>
                         <tr>
