added Fur Out project

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
         <div class="card-deck">
             <div class="card" style="max-width: 250px;">
                 <a href="/sudoku">
-                    <img src="/images/Pen-Sudoku.jpg" class="card-img-top" alt="">
+                    <img src="/images/card_thumbnail_sudoku.jpg" class="card-img-top" alt="">
                 </a>
                 <div class="card-body">
                     <h5 class="card-title">Sudoku</h5>
@@ -38,6 +38,30 @@
                 </div>
                 <div class="card-footer text-center">
                     <a href="/crypto-blocks" class="btn btn-outline-primary">Go</a>
+                </div>
+            </div>
+            <div class="card" style="max-width: 250px;">
+                <a href="/skylines-end">
+                    <img src="/images/card_thumbnail_skyline.png" class="card-img-top" alt="">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Skyline's End</h5>
+                    <p class="card-text">A collection of algorithmically generated interactive NFT sets it's view in dusk of a city skyline.</p>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="/skylines-end" class="btn btn-outline-primary">Go</a>
+                </div>
+            </div>
+            <div class="card" style="max-width: 250px;">
+                <a href="/fur-out">
+                    <img src="/images/card_thumbnail_furout.png" class="card-img-top" alt="">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Fur Out</h5>
+                    <p class="card-text">Just give me some fur please.</p>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="/fur-out" class="btn btn-outline-primary">Go</a>
                 </div>
             </div>
         </div>
