Added snake game.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,4 +65,18 @@
                 </div>
             </div>
         </div>
+        <div class="card-deck">
+            <div class="card" style="max-width: 250px;">
+                <a href="/snake-game">
+                    <img src="/images/card_thumbnail_snake.png" class="card-img-top" alt="">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Snake Game</h5>
+                    <p class="card-text">Self made replica of a classic game.</p>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="/snake-game" class="btn btn-outline-primary">Go</a>
+                </div>
+            </div>
+        </div>
     </div>
