--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -30,7 +30,11 @@
                     Fur Out
                 </a>
             </li>
-            
+            <li class="nav-item">
+                <a class="nav-link <% if(pageName === 'snake-game'){%>active<%}%>" href="/snake-game">
+                    Snake Game
+                </a>
+            </li>
         </ul>
 
         <% if (user) { %>
