--- a/views/snake-game.ejs
+++ b/views/snake-game.ejs
@@ -4,7 +4,7 @@
         <div class="pb-2 mt-4 mb-4 border-bottom">
             <h2>Snake Game</h2>
             <div class="small mt-3">&bull; Self made replica of a classic game.<br>
-                &bull; Interact with touch, mouse or directional button.
+                &bull; Interact with touch, mouse or keyboard directional button.
             </div>
         </div>
 
