flow field project

--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -35,6 +35,11 @@
                     Snake Game
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link <% if(pageName === 'flow-field'){%>active<%}%>" href="/flow-field">
+                    Flow Field
+                </a>
+            </li>
         </ul>
 
         <% if (user) { %>
