--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,5 +78,17 @@
                     <a href="/snake-game" class="btn btn-outline-primary">Go</a>
                 </div>
             </div>
+            <div class="card" style="max-width: 250px;">
+                <a href="/flow-field">
+                    <img src="/images/card_thumbnail_flowfield.png" class="card-img-top" alt="">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Flow Field</h5>
+                    <p class="card-text">Perlin noise flow of particles.</p>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="/flow-field" class="btn btn-outline-primary">Go</a>
+                </div>
+            </div>
         </div>
     </div>
