new project: Canvas Paranoia.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,5 +90,17 @@
                     <a href="/flow-field" class="btn btn-outline-primary">Go</a>
                 </div>
             </div>
+            <div class="card" style="max-width: 250px;">
+                <a href="/canvas-paranoia">
+                    <img src="/images/card_thumbnail_flowfield.png" class="card-img-top" alt="">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Canvas Paranoia</h5>
+                    <p class="card-text">A simulator of random acrylic gradient texture painted on canvas material.</p>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="/canvas-paranoia" class="btn btn-outline-primary">Go</a>
+                </div>
+            </div>
         </div>
     </div>
