--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -40,6 +40,11 @@
                     Flow Field
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link <% if(pageName === 'canvas-paranoia'){%>active<%}%>" href="/canvas-paranoia">
+                    Canvas Paranoia
+                </a>
+            </li>
         </ul>
 
         <% if (user) { %>
