new project: Emoji Scream

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,5 +102,17 @@
                     <a href="/canvas-paranoia" class="btn btn-outline-primary">Go</a>
                 </div>
             </div>
+            <div class="card" style="max-width: 250px;">
+                <a href="/emoji-scream">
+                    <img src="/images/card_thumbnail_emojiscream.png" class="card-img-top" alt="">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Emoji Scream</h5>
+                    <p class="card-text">Shock expression emoji in manga style.</p>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="/emoji-scream" class="btn btn-outline-primary">Go</a>
+                </div>
+            </div>
         </div>
     </div>
