--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -45,6 +45,11 @@
                     Canvas Paranoia
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link <% if(pageName === 'emoji-scream'){%>active<%}%>" href="/emoji-scream">
+                    Emoji Scream
+                </a>
+            </li>
         </ul>
 
         <% if (user) { %>
