new project: Domain Warping

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
 <% layout('layout') -%>
     <style>
+        .card {
+            min-width: 250px;
+            max-width: 250px;
+            margin-top: 7px;
+        }
         .card-img-top {
             height: 250px;
         }
@@ -14,20 +19,16 @@
         </div>
 
         <div class="card-deck">
-            <div class="card" style="max-width: 250px;">
+            <div class="card">
                 <a href="/sudoku">
                     <img src="/images/card_thumbnail_sudoku.jpg" class="card-img-top" alt="">
                 </a>
                 <div class="card-body">
                     <h5 class="card-title">Sudoku</h5>
                     <p class="card-text">A hobby experimental Sudoku game developed during covid-19 lockdown.</p>
-
-                </div>
-                <div class="card-footer text-center">
-                    <a href="/sudoku" class="btn btn-outline-primary">Go</a>
                 </div>
             </div>
-            <div class="card" style="max-width: 250px;">
+            <div class="card">
                 <a href="/crypto-blocks">
                     <img src="/images/card_thumbnail_crypto.png" class="card-img-top" alt="">
                 </a>
@@ -36,11 +37,8 @@
                     <p class="card-text">A generative NFT art collection of digital blocks
                         processing in the blockchain domain.</p>
                 </div>
-                <div class="card-footer text-center">
-                    <a href="/crypto-blocks" class="btn btn-outline-primary">Go</a>
-                </div>
             </div>
-            <div class="card" style="max-width: 250px;">
+            <div class="card">
                 <a href="/skylines-end">
                     <img src="/images/card_thumbnail_skyline.png" class="card-img-top" alt="">
                 </a>
@@ -48,11 +46,8 @@
                     <h5 class="card-title">Skyline's End</h5>
                     <p class="card-text">A collection of algorithmically generated interactive NFT sets it's view in dusk of a city skyline.</p>
                 </div>
-                <div class="card-footer text-center">
-                    <a href="/skylines-end" class="btn btn-outline-primary">Go</a>
-                </div>
             </div>
-            <div class="card" style="max-width: 250px;">
+            <div class="card">
                 <a href="/fur-out">
                     <img src="/images/card_thumbnail_furout.png" class="card-img-top" alt="">
                 </a>
@@ -60,12 +55,7 @@
                     <h5 class="card-title">Fur Out</h5>
                     <p class="card-text">Just give me some fur please.</p>
                 </div>
-                <div class="card-footer text-center">
-                    <a href="/fur-out" class="btn btn-outline-primary">Go</a>
-                </div>
             </div>
-        </div>
-        <div class="card-deck">
             <div class="card" style="max-width: 250px;">
                 <a href="/snake-game">
                     <img src="/images/card_thumbnail_snake.png" class="card-img-top" alt="">
@@ -73,9 +63,6 @@
                 <div class="card-body">
                     <h5 class="card-title">Snake Game</h5>
                     <p class="card-text">Self made replica of a classic game.</p>
-                </div>
-                <div class="card-footer text-center">
-                    <a href="/snake-game" class="btn btn-outline-primary">Go</a>
                 </div>
             </div>
             <div class="card" style="max-width: 250px;">
@@ -86,9 +73,6 @@
                     <h5 class="card-title">Flow Field</h5>
                     <p class="card-text">Perlin noise flow of particles.</p>
                 </div>
-                <div class="card-footer text-center">
-                    <a href="/flow-field" class="btn btn-outline-primary">Go</a>
-                </div>
             </div>
             <div class="card" style="max-width: 250px;">
                 <a href="/canvas-paranoia">
@@ -97,9 +81,6 @@
                 <div class="card-body">
                     <h5 class="card-title">Canvas Paranoia</h5>
                     <p class="card-text">A simulator of random acrylic gradient texture painted on canvas material.</p>
-                </div>
-                <div class="card-footer text-center">
-                    <a href="/canvas-paranoia" class="btn btn-outline-primary">Go</a>
                 </div>
             </div>
             <div class="card" style="max-width: 250px;">
@@ -110,8 +91,14 @@
                     <h5 class="card-title">Emoji Scream</h5>
                     <p class="card-text">Shock expression emoji in manga style.</p>
                 </div>
-                <div class="card-footer text-center">
-                    <a href="/emoji-scream" class="btn btn-outline-primary">Go</a>
+            </div>
+            <div class="card" style="max-width: 250px;">
+                <a href="/domain-warping">
+                    <img src="/images/card_thumbnail_domainwarping.png" class="card-img-top" alt="">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Domain Warping</h5>
+                    <p class="card-text">A technique in computer graphics for generating procedural textures and geometry.</p>
                 </div>
             </div>
         </div>
