--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -50,6 +50,11 @@
                     Emoji Scream
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link <% if(pageName === 'domain-warping'){%>active<%}%>" href="/domain-warping">
+                    Domain Warping
+                </a>
+            </li>
         </ul>
 
         <% if (user) { %>
