new project: Domain Warping

--- a/views/domain-warping.ejs
+++ b/views/domain-warping.ejs
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="pb-2 mt-4 mb-4 border-bottom">
         <h2>Domain Warping</h2>
-        <div class="small mt-3">&bull; Also known as noise distortion.<br>
+        <div class="small mt-3">&bull; Also known as domain distortion.<br>
             &bull; A common technique in computer graphics for generating procedural textures and geometry.
         </div>
     </div>
